--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
       "cordova-plugin-appminimize": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-splashscreen": {},
-      "phonegap-plugin-push": {}
+      "phonegap-plugin-push": {},
+      "cordova-plugin-whitelist": {}
     }
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "cordova-plugin-appminimize": "https://github.com/tomloprod/cordova-plugin-appminimize.git",
     "cordova-plugin-network-information": "^1.3.3",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.3",
     "phonegap-plugin-push": "^2.1.2"
   }
 }
